fix spacing

--- a/main.css
+++ b/main.css
@@ -1,7 +1,6 @@
 @import "https://fonts.googleapis.com/css?family=Montserrat:700|Open+Sans:300,400|Pacifico|Playfair+Display|Satisfy|Abhaya+Libre";
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap');
-/*@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700,900");
-*/@import url('https://fonts.googleapis.com/css2?family=Source+Serif+Pro&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Source+Serif+Pro&display=swap')
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap');
 body, html {
@@ -67,40 +66,46 @@ body::after{
     width: 80%;
 }
 
-.bigImage img {
+.big img {
     width: 100%;
 }
 
-.smallImage img {
+.small img {
     margin-left: 10%;
     margin-right: 10%;
     width: 80%;
 }
 
+.photo p {
+  font-family: 'Libre Baskerville', serif;
+  font-size: 1em;
+  margin-bottom: 70px;
+}
+
+.small p {
+    margin-left: 10%;
+}
+
+.big p {
+    margin-left: 5%;
+}
+
+/* Make small full screen */
+
 @media screen and (max-width: 980px) {
-    .smallImage img {
+    .small img {
         margin: 0;
         width: 100%;
     }
 
-    .smallImage p {
-        font-family: 'Libre Baskerville', serif;
-        font-size: 1em;
+    .small p {
         margin-left: 5%;
+        margin-right: 5%;
+    }
+
+    .big p {
+      margin-right: 5%;
     }
 }
 
-.smallImage p {
-    font-family: 'Libre Baskerville', serif;
-    font-size: 1em;
-    margin-bottom: 70px;
-    margin-left: 10%;
-}
-
-.bigImage p {
-    font-family: 'Libre Baskerville', serif;
-    font-size: 1em;
-    margin-left: 5%;
-    margin-bottom: 70px;
-}
 
